--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="title">Hello, Muhamad Arief Rachmatullah Here!</p>
             <p class="description">Siswa SMKN 1 Pandeglang</p>
             <p class="description">Jurusan Rekayasa Perangkat Lunak</p>
-            <img src="asset/foto/poto propil.png" alt="Arief foto 1" class="img-foto">
+            <img src="asset/foto/foto-profile.png" alt="Arief foto 1" class="img-foto">
         </div>
     </div>
     <div class="parallax">
